节点功能全部完成

--- a/src/Lang/En.json
+++ b/src/Lang/En.json
@@ -42,10 +42,10 @@
   "取消交易签名": "Cancel Transaction Signature",
   "交易失败": "Transaction Failed",
   "请求错误": "Request Error",
-  "暂无数据":"No Data",
+  "暂无数据": "No Data",
   "取消": "Cancel",
   "确认": "Confirm",
- "全网入金1%永久分红": "1% perpetual dividend on total network deposits",
+  "全网入金1%永久分红": "1% perpetual dividend on total network deposits",
   "买入手续费1%永久分红": "1% perpetual dividend from buy transaction fees",
   "卖出手续费1.5%永久分红": "1.5% perpetual dividend from sell transaction fees",
   "防暴跌机制手续费30%永久分红": "30% perpetual dividend from anti-crash mechanism fees",
@@ -55,8 +55,8 @@
   "大节点合伙人赠送VIP2级别(激活即可享受)": "Large Node Partners receive VIP Level 2 (available upon activation)",
   "赠送节点合伙人抢购金额的50%捐赠矿池收益账户,大节点合伙人赠送500U账户(激活即可享受)": "50% of the node partner purchase amount is donated to the mining pool income account; Large Node Partners receive a 500U account (available upon activation)",
   "节点业绩": "Node Performance",
-  "总量":"Total",
-  "生态节点":"Ecosystem Node",
+  "总量": "Total",
+  "生态节点": "Ecosystem Node",
   "前1～500位: 奖励2000枚VIPL": "Top 1–500: Reward 2000 VIPL",
   "前501～1000位: 奖励1400枚VIPL": "Top 501–1000: Reward 1400 VIPL",
   "前1001～1600位: 奖励980枚VIPL": "Top 1001–1600: Reward 980 VIPL",
@@ -117,5 +117,26 @@
   "编号": "ID",
   "节点累计收益": "Total Node Earnings",
   "待领取节点收益": "Pending Node Earnings",
-  "领取收益": "Claim Earnings"
+  "领取收益": "Claim Earnings",
+  "复制": "Copy",
+  "联创节点": "Co-Founder Node",
+  "赠送V3级别": "Includes V3 Level",
+  "赠送20000枚VEX": "Includes 20,000 VEX",
+  "白名单购买资格10000U": "Whitelist Purchase Quota: 10,000U",
+  "捐赠盈利税5%": "Donation Profit Tax 5%",
+  "市场盈利税25%": "Market Profit Tax 25%",
+  "赠送V2级别": "Includes V2 Level",
+  "赠送6000枚VEX": "Includes 6,000 VEX",
+  "白名单购买资格2000U": "Whitelist Purchase Quota: 2,000U",
+  "普通节点": "Standard Node",
+  "赠送V1级别": "Includes V1 Level",
+  "赠送2000枚VEX": "Includes 2,000 VEX",
+  "白名单购买资格500U": "Whitelist Purchase Quota: 500U",
+  "你已购买过节点": "You have already purchased a node",
+  "已售空": "Sold Out",
+  "注：捐赠和市场盈利税按1000U/份为单": "Note: Donation and market profit taxes are calculated per 1,000U unit",
+  "排名": "Rank",
+  "用户": "User",
+  "总捐赠": "Total Donation",
+   "社区节点": "Community Node"
 }
