--- a/src/Lang/Japanese.json
+++ b/src/Lang/Japanese.json
@@ -117,6 +117,26 @@
   "编号": "番号",
   "节点累计收益": "ノード累計収益",
   "待领取节点收益": "受取待ちノード収益",
-  "领取收益": "収益を受け取る"
-
+  "领取收益": "収益を受け取る",
+  "复制": "コピー",
+  "联创节点": "共同創設ノード",
+  "赠送V3级别": "V3レベル付与",
+  "赠送20000枚VEX": "VEX 20,000枚付与",
+  "白名单购买资格10000U": "ホワイトリスト購入枠 10,000U",
+  "捐赠盈利税5%": "寄付利益税 5%",
+  "市场盈利税25%": "市場利益税 25%",
+  "赠送V2级别": "V2レベル付与",
+  "赠送6000枚VEX": "VEX 6,000枚付与",
+  "白名单购买资格2000U": "ホワイトリスト購入枠 2,000U",
+  "普通节点": "通常ノード",
+  "赠送V1级别": "V1レベル付与",
+  "赠送2000枚VEX": "VEX 2,000枚付与",
+  "白名单购买资格500U": "ホワイトリスト購入枠 500U",
+  "你已购买过节点": "すでにノードを購入しています",
+  "已售空": "完売",
+  "注：捐赠和市场盈利税按1000U/份为单": "注記：寄付および市場利益税は 1,000U 単位で計算されます",
+  "排名": "ランキング",
+  "用户": "ユーザー",
+  "总捐赠": "総寄付額",
+  "社区节点": "コミュニティノード"
 }
