--- a/src/Lang/Korean.json
+++ b/src/Lang/Korean.json
@@ -117,5 +117,26 @@
   "编号": "번호",
   "节点累计收益": "노드 누적 수익",
   "待领取节点收益": "수령 대기 노드 수익",
-  "领取收益": "수익 수령"
+  "领取收益": "수익 수령",
+  "复制": "복사",
+  "联创节点": "공동 창립 노드",
+  "赠送V3级别": "V3 등급 제공",
+  "赠送20000枚VEX": "VEX 20,000개 제공",
+  "白名单购买资格10000U": "화이트리스트 구매 한도 10,000U",
+  "捐赠盈利税5%": "기부 수익세 5%",
+  "市场盈利税25%": "시장 수익세 25%",
+  "赠送V2级别": "V2 등급 제공",
+  "赠送6000枚VEX": "VEX 6,000개 제공",
+  "白名单购买资格2000U": "화이트리스트 구매 한도 2,000U",
+  "普通节点": "일반 노드",
+  "赠送V1级别": "V1 등급 제공",
+  "赠送2000枚VEX": "VEX 2,000개 제공",
+  "白名单购买资格500U": "화이트리스트 구매 한도 500U",
+  "你已购买过节点": "이미 노드를 구매하셨습니다",
+  "已售空": "품절",
+  "注：捐赠和市场盈利税按1000U/份为单": "참고: 기부 및 시장 수익세는 1,000U 단위로 계산됩니다",
+  "排名": "순위",
+  "用户": "사용자",
+  "总捐赠": "총 기부액",
+  "社区节点": "커뮤니티 노드"
 }
