--- a/src/Lang/Thai.json
+++ b/src/Lang/Thai.json
@@ -55,7 +55,7 @@
   "大节点合伙人赠送VIP2级别(激活即可享受)": "พันธมิตรโหนดขนาดใหญ่ได้รับ VIP ระดับ 2 (มีผลหลังการเปิดใช้งาน)",
   "赠送节点合伙人抢购金额的50%捐赠矿池收益账户,大节点合伙人赠送500U账户(激活即可享受)": "มอบ 50% ของจำนวนเงินซื้อของพันธมิตรโหนดเพื่อบริจาคเข้าสู่บัญชีรายได้ของพูลขุด พันธมิตรโหนดขนาดใหญ่ได้รับบัญชี 500U (มีผลหลังการเปิดใช้งาน)",
   "节点业绩": "ผลการทำงานของโหนด",
-   "总量": "ทั้งหมด",
+  "总量": "ทั้งหมด",
   "生态节点": "โหนดระบบนิเวศ",
   "前1～500位: 奖励2000枚VIPL": "อันดับที่ 1–500: รางวัล 2000 VIPL",
   "前501～1000位: 奖励1400枚VIPL": "อันดับที่ 501–1000: รางวัล 1400 VIPL",
@@ -117,6 +117,26 @@
   "编号": "หมายเลข",
   "节点累计收益": "รายได้โหนดสะสม",
   "待领取节点收益": "รายได้โหนดที่รอรับ",
-  "领取收益": "รับรายได้"
-
+  "领取收益": "รับรายได้",
+  "复制": "คัดลอก",
+  "联创节点": "โหนดผู้ร่วมก่อตั้ง",
+  "赠送V3级别": "รับระดับ V3",
+  "赠送20000枚VEX": "รับ VEX จำนวน 20,000",
+  "白名单购买资格10000U": "สิทธิ์ซื้อไวท์ลิสต์ 10,000U",
+  "捐赠盈利税5%": "ภาษีกำไรจากการบริจาค 5%",
+  "市场盈利税25%": "ภาษีกำไรตลาด 25%",
+  "赠送V2级别": "รับระดับ V2",
+  "赠送6000枚VEX": "รับ VEX จำนวน 6,000",
+  "白名单购买资格2000U": "สิทธิ์ซื้อไวท์ลิสต์ 2,000U",
+  "普通节点": "โหนดทั่วไป",
+  "赠送V1级别": "รับระดับ V1",
+  "赠送2000枚VEX": "รับ VEX จำนวน 2,000",
+  "白名单购买资格500U": "สิทธิ์ซื้อไวท์ลิสต์ 500U",
+  "你已购买过节点": "คุณได้ซื้อโหนดแล้ว",
+  "已售空": "ขายหมดแล้ว",
+  "注：捐赠和市场盈利税按1000U/份为单": "หมายเหตุ: ภาษีการบริจาคและภาษีกำไรตลาดคิดต่อหน่วยละ 1,000U",
+  "排名": "อันดับ",
+  "用户": "ผู้ใช้",
+  "总捐赠": "ยอดบริจาครวม",
+  "社区节点": "โหนดชุมชน"
 }
