--- a/src/Lang/Vietnamese.json
+++ b/src/Lang/Vietnamese.json
@@ -55,7 +55,7 @@
   "大节点合伙人赠送VIP2级别(激活即可享受)": "Đối tác nút lớn được tặng VIP cấp 2 (có hiệu lực sau khi kích hoạt)",
   "赠送节点合伙人抢购金额的50%捐赠矿池收益账户,大节点合伙人赠送500U账户(激活即可享受)": "Tặng 50% số tiền mua của đối tác nút để quyên góp vào tài khoản lợi nhuận của mỏ đào, đối tác nút lớn được tặng tài khoản 500U (có hiệu lực sau khi kích hoạt)",
   "节点业绩": "Hiệu suất nút",
-    "总量": "Tổng số",
+  "总量": "Tổng số",
   "生态节点": "Nút hệ sinh thái",
   "前1～500位: 奖励2000枚VIPL": "Top 1–500: Thưởng 2000 VIPL",
   "前501～1000位: 奖励1400枚VIPL": "Top 501–1000: Thưởng 1400 VIPL",
@@ -117,6 +117,26 @@
   "编号": "Mã số",
   "节点累计收益": "Thu nhập node tích lũy",
   "待领取节点收益": "Thu nhập node chờ nhận",
-  "领取收益": "Nhận thu nhập"
-
+  "领取收": "Nhận thu nhập",
+  "复制": "Sao chép",
+  "联创节点": "Node Đồng Sáng Lập",
+  "赠送V3级别": "Tặng cấp V3",
+  "赠送20000枚VEX": "Tặng 20.000 VEX",
+  "白名单购买资格10000U": "Quyền mua Whitelist 10.000U",
+  "捐赠盈利税5%": "Thuế lợi nhuận quyên góp 5%",
+  "市场盈利税25%": "Thuế lợi nhuận thị trường 25%",
+  "赠送V2级别": "Tặng cấp V2",
+  "赠送6000枚VEX": "Tặng 6.000 VEX",
+  "白名单购买资格2000U": "Quyền mua Whitelist 2.000U",
+  "普通节点": "Node Thường",
+  "赠送V1级别": "Tặng cấp V1",
+  "赠送2000枚VEX": "Tặng 2.000 VEX",
+  "白名单购买资格500U": "Quyền mua Whitelist 500U",
+  "你已购买过节点": "Bạn đã mua node này",
+  "已售空": "Đã bán hết",
+  "注：捐赠和市场盈利税按1000U/份为单": "Lưu ý: Thuế quyên góp và thuế thị trường được tính theo mỗi đơn vị 1.000U",
+  "排名": "Xếp hạng",
+  "用户": "Người dùng",
+  "总捐赠": "Tổng quyên góp",
+  "社区节点": "Node Cộng Đồng"
 }
