--- a/src/Lang/ZhHant.json
+++ b/src/Lang/ZhHant.json
@@ -117,5 +117,26 @@
   "编号": "編號",
   "节点累计收益": "節點累計收益",
   "待领取节点收益": "待領取節點收益",
-  "领取收益": "領取收益"
+  "领取收益": "領取收益",
+  "复制": "複製",
+  "联创节点": "聯創節點",
+  "赠送V3级别": "贈送 V3 級別",
+  "赠送20000枚VEX": "贈送 20000 枚 VEX",
+  "白名单购买资格10000U": "白名單購買資格 10000U",
+  "捐赠盈利税5%": "捐贈盈利稅 5%",
+  "市场盈利税25%": "市場盈利稅 25%",
+  "赠送V2级别": "贈送 V2 級別",
+  "赠送6000枚VEX": "贈送 6000 枚 VEX",
+  "白名单购买资格2000U": "白名單購買資格 2000U",
+  "普通节点": "普通節點",
+  "赠送V1级别": "贈送 V1 級別",
+  "赠送2000枚VEX": "贈送 2000 枚 VEX",
+  "白名单购买资格500U": "白名單購買資格 500U",
+  "你已购买过节点": "你已購買過節點",
+  "已售空": "已售空",
+  "注：捐赠和市场盈利税按1000U/份为单": "註：捐贈和市場盈利稅按 1000U／份 為單位",
+  "排名": "排名",
+  "用户": "用戶",
+  "总捐赠": "總捐贈",
+  "社区节点": "社區節點"
 }
